- 파일 역할별 프로젝트 구조 재조정 - README 반영

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <footer class="mt-5 p-3 text-center bg-light">GitHub Finder &copy;</footer>
 
-    <script src="common/github.js"></script>
-    <script src="common/ui.js"></script>
+    <script src="api/github.js"></script>
+    <script src="components/ui.js"></script>
     <script src="common/app.js"></script>
   </body>
 </html>
