--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </section>
     </main>
     <!-- ====== [FOOTER] ====== -->
-    <footer class="footer">GitHub Finder &copy;</footer>
+    <footer class="footer">&copy; 2025 nara9yo. All rights reserved.</footer>
     <!-- ====== [APP SCRIPT] ====== -->
     <script type="module" src="app.js"></script>
   </body>
